--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -158,7 +158,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ### Light environments
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. This trend is mediated by foliage LAI and density, where the gradient is more prounced in broad-leaf forests than needle-leaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b; Chazdon & Fetcher, 1984; Smith et al., 2019; Tymen et al., 2017].Therefore, light reaching forest floors that is incident to canopy tops can range from approximately 1-2% in tropical forest floors  [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], 4-5% in mixed-wood boreal and northern temperate [@bartemucciOverstoryInfluencesLight2006], to 17-34% in needle-leaf forests [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute sunflecks to shaded forest regions that receive ~1/3 of their carbon during photosynthesis through these short light exposures [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
+Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. This trend is mediated by foliage LAI and density, where the gradient is more prounced in broad-leaf forests than needle-leaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @vonarxSpatiotemporalEffectsForest2012a; @poorterMetaanalysisPlantResponses2019b; Chazdon & Fetcher, 1984; Smith et al., 2019; Tymen et al., 2017].Light reaching forest floors that is incident to the canopy top can range from approximately 1-2% in tropical forests  [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], 4-5% in mixed-wood boreal and northern temperate forests[@bartemucciOverstoryInfluencesLight2006] to 17-34% in needle-leaf forests [@baldocchiSeasonalVariationEnergy1997]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute sunflecks to shaded forest regions that receive ~1/3 of their carbon during photosynthesis through these short light exposures [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
 
 ### Wind speeds 
 **Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [@juckerCanopyStructureTopography2018].**
@@ -168,7 +168,7 @@ Across all **#** forested NEON sites, wind speeds increased with height, with da
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering is greater under dense-canopy forests than open-canopy forests [*Defrenne et al. 2021*]. Therefore, dense forests maintain daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than pine and boreal forests, nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests tend to maintain higher daytime maximum temperature in the understory that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009] and  warmer nighttime understory temperatures than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a].
+The strength of this buffering is greater under dense-canopy than open-canopy forests [*Defrenne et al. 2021*]. Where dense forests maintain daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than pine and boreal forests, nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests maintain higher daytime maximum temperature in the understory closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009] and  sometimes warmer nighttime understory temperatures than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a].
 
 Seasonally, buffering capacity increases with water availablity [@davis_microclimatic_2019] and is greater in wet than dry season, in tropical and temperate forests [@rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. However, under colder conditions, dense forest canopies maintain warmer higher minimum temperatures [$T_{min}$] in the understory relative to open-forests and nearby clearings [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017; @mcgregor_tree_nodate] where greater radiative heat loss in exposed areas results in lower $T_{min}$. 
 
@@ -176,7 +176,7 @@ Tree height also plays a role in buffering where trees upto 20m with higher LAI 
 
 ### Humidity and evaporative demand
 **Humidity also varies across the forest vertical profile, and is generally higher in the understory (Fig. `r fig_NEON_vertical`).**[@mcgregor_tree_nodate]
-Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity [RH] below-canopy compared to open forests and nearby open areas. This trend is greater in wetter conditions, in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit (VPD), an important metric expressing the driving force of water loss from a leaf.  Tropical forests during the wet season tend to have higher VPD, therefore greater evaporative demand, in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
+Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity [RH] below-canopy than open forests and nearby open areas. This trend is greater in wetter conditions, in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit (VPD), an important metric expressing the driving force of water loss from a leaf.  Tropical forests during the wet season tend to have higher VPD, therefore greater evaporative demand, in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
 
 ### Carbon dioxide
 
@@ -185,7 +185,7 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-The strength of buffering decreases with altitude, moving to open-forests  [[@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @rajsnerovaMorphologicalBiochemicalPhysiological2015; @liangForestTypeHeight2019], increases with wetter than drier regions [**REF**] and proximity to water such as in riparian forests. [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
+With altitude, the strength of buffering decreases, moving to open-forests  [[@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @rajsnerovaMorphologicalBiochemicalPhysiological2015; @liangForestTypeHeight2019], increases in wetter than drier regions [**REF**] and with proximity to water, for eg. in riparian forests. [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]
 
 
 ## Leaf temperature 
@@ -194,15 +194,15 @@ The strength of buffering decreases with altitude, moving to open-forests  [[@ze
 
 **Many of the vertical gradient biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
 
-Leaves adapt to their biophysical environment to maximize carbon assimilation by maintaining optimum leaf temperature in a given circumstance [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. As a result, leaves can exhibit 'limited homeothermy' where they are cooler than air at high temperature and warmer than air at low temperature or 'megathermy' where they are drastically warmer than $T_{air}$. In some cases, 'poikilothermy', where $T_{leaf}$ can be equalled to $T_{air}$ [@cavaleriColdbloodedForestsWarming2020; @drakeNoEvidenceHomeostatic2020]. 
+Leaves adapt to their biophysical environment to maximize carbon assimilation, by maintaining optimum leaf temperature in a given circumstance [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. As a result, leaves can exhibit 'limited homeothermy' where they are cooler than air at high temperature and warmer than air at low temperature or 'megathermy' where they are drastically warmer than $T_{air}$. In some cases, 'poikilothermy', where $T_{leaf}$ can be equalled to $T_{air}$ [@cavaleriColdbloodedForestsWarming2020; @drakeNoEvidenceHomeostatic2020]. 
 
 $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost (such as transpiration) to the environment [Fig. 2; @michaletzPlantThermoregulationEnergetics2015].
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
-Leaf thermoregulation is a tradeoff between water use strategy and optimum leaf temperature [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]where stomatal conductance ($g_s$)  largely influences $T_{leaf}$ by facilitating heat dissipation, and leaf water content affects the rate of leaf warming [@kochDiurnalPatternsLeaf1994a; @fauset_differences_2018]. With sufficient $g_s$ leaves can regulate their temperature even in biophysical environment [**REF**], but limitation to $g_s$, driven by irradiance, $T_{air}$, VPD or drought curbs heat dissipation, drastically increasing leaf temperature. 
+Leaf thermoregulation is a tradeoff between water use strategy and optimum leaf temperature [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. With sufficient stomatal conductance ($g_s$) leaves can regulate their temperature, by dissapating heat, even in drastic biophysical environment [**REF**] but when leaf water demand exceeds water transport, driven by irradiance, $T_{air}$, VPD or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$. 
 
-Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$. With maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, but $g_s$ limitation can cause solar radiation to substantially elevate $T_{leaf}$ greater than $T_{air}$ [@cavaleriColdbloodedForestsWarming2020].
+Incoming solar radiation is a strong driver of $T_{leaf}$, relative to $T_{air}$. With maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, but $g_s$ limitation can cause solar radiation to substantially elevate $T_{leaf}$ greater than $T_{air}$ [@cavaleriColdbloodedForestsWarming2020].
 
 Greater upper canopy wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ by increasing boundary layer conductance ($g_a$) for exposed leaves [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, leaves exposed to higher wind speeds would be most effective at cooling with high $g_s$ [Drake et al. 2018]. At low wind conditions, small $g_a$ to heat transfer can increase $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017] where boundary layer resistance increases with thickness of air layer at the leaf surface. This tends to be greater in buffered leaves [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
 
@@ -217,9 +217,9 @@ Vertical distribution of leaf temperature is dependent on canopy buffering capac
 
 Particularly, open-forests with buffering capacity can have greater lower canopy $T_{leaf}$ than upper canopy, reflecting microclimate conditions of vertical air mixing, heating from the ground, light permeating through canopy layers and still air in the lower canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. In other conditions, increase in inner canopy relative humidity can increase $T_{leaf}$  relatively more than above canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. Similarly, open trees growing close to the ground can experience greater heat stress and $T_{air}$ in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
-**However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** In closed-canopy forests with increased buffering capacity, large $T_{leaf} - T_{air}$ increases with height where higher $T_{leaf}$ are found in the upper canopies than lower canopies, due to midday stomatal closure [Slot et al. 2019]. This is seen in tropical forests [@fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a], semi-deciduous tropical forest during the wet season [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a]. 
+**However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** In closed-canopy forests with increased buffering capacity, large $T_{leaf} - T_{air}$ increases with height where higher $T_{leaf}$ are found in upper than lower canopies, due to midday stomatal closure [Slot et al. 2019]. This is seen in tropical forests [@fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a], semi-deciduous tropical forest during the wet season [@rey-sanchez_spatial_2016], and as well in a temperate forest [@mauTemperateTropicalForest2018a]. 
 
-Greater light input in exposed upper canopy leaves can sometimes increase $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$ making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. Across forest types, temperate deciduous upper canopy $T_{leaf}$ - $T_{air}$ has shown to be greater than $T_{leaf}$ - $T_{air}$ of upper canopy tropical moist and wet [@mauTemperateTropicalForest2018a].
+Greater light input in exposed upper canopy leaves can sometimes increase $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$ making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. Additionally, the upper canopy of temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than $T_{leaf}$ - $T_{air}$ of upper canopy tropical moist and wet forest species [@mauTemperateTropicalForest2018a].
 
 
 ### Leaf traits 
@@ -230,10 +230,10 @@ Greater light input in exposed upper canopy leaves can sometimes increase $T_{le
 
 Leaf morphological adaptation to the local microenvironement takes place during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004]. Degrees of direct to diffused light and consequental water demands shape sun vs. shade leaves and their necessary vascular architecture [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. Since canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`) it is unsuprising, then, that leaf traits vary dramatically across vertical gradients. 
 
-While light based acclimation in leaf traits is well established, research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light.However, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
+While light-driven plasticity in leaf traits is well established, research on solely height-driven leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. However, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
 
 In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*] such that gas exchange is strongly constrained by at the tops of(~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
-Isolating height (>35m) under constant light conditions (photon flux density) canopy stomatal conductance decreases along with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have shown to decrease, while leaf mass per area (at greater than 20m) to increase  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
+Isolating height (>35m) under constant light conditions, show that canopy stomatal conductance decreases along with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have shown to decrease, while leaf mass per area (at greater than 20m) to increase  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
 
 Disentangling the influences of hydraulic constraints, light, and other biophysical drivers that vary with height (Fig. `r fig_NEON_vertical`) on leaf form and function remains an important area for research, but is beyond the scope of the current review.
 Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.
@@ -248,7 +248,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-individuals going from buffered and shaded canopy positions to exposed positions, leaf traits vary on the basis of biophysical demands [@casasSunShadeLeaves2011] and therefore exhibit commonly observed patterns in leaf anatomical, structural and biochemical traits at an intra-canopy gradient, pointed by several studies [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These observations contribute to [understanding] leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
+Within-individuals going from buffered [shaded] canopy positions to exposed, leaf traits vary on the basis of biophysical demands [@casasSunShadeLeaves2011] and therefore exhibit commonly observed patterns in leaf anatomical, structural and biochemical traits at an intra-canopy gradient, pointed by several studies [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These observations contribute to [understanding] leaf temperature distribution across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity.
 
 However, while a majority of relevant research have focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves, given the vastly different light environments at the bottom of the canopy and that most leaves in the canopy are likely to be shade leaves, there is a strong research need to better characterize trait relationships and leaf responses through the whole vertical canopy [@keenanGlobalLeafTrait2016], such as by incorporating sun and shade in modelling leaf economic spectrum (LES) traits within-canopy gradient, partly because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020]. 
 
@@ -266,11 +266,11 @@ nocite: |
 
 #### Morphological traits
 
-Going from shaded to exposed canopy position, morphological adaptation to dissapate heat increases. Sun leaves are often thicker, smaller, hairier, with greater dissection--lobes and serration--[@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with more vertical leaf angles than shade leaves [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. On the other hand, because shaded leaves have greater effective leaf width [@fauset_differences_2018], boundary layer thickness, stomatal resistance and therefore longer thermal time constant, they exhibit lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019]. Thus, shade leaves remain cooler in buffered conditions but can become substanially warmer under greater light or $T_{air}$ [@leighInfluenceLeafSize2017]
+Going from shaded to exposed canopy position, morphological adaptation to dissapate heat increases. Sun leaves are often thicker, smaller, hairier, with greater dissection--lobes and serration--[@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with more vertical leaf angles than shade leaves [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. On the other hand, because shaded leaves have greater effective leaf width [@fauset_differences_2018], boundary layer thickness, stomatal resistance and therefore longer thermal time constant, they exhibit lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019]. Which leads to cooler $T_{leaf}$ under buffered conditions, and substanially warmer $T_{leaf}$ under greater light or $T_{air}$ [@leighInfluenceLeafSize2017]
 
 #### Biochemical and physiological traits
 
-Nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks under available soil nitrogen conditions [@kitaoCanopyNitrogenDistribution2018]. Therefore, during growing season, $N_{area}$, along with LMA, leaf soluble sugars, starch and non-structural carbons increase with exposure [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Weerasinghe et al. 2014]. $P_{area}$ follows a similar trend, but with increased growth at higher light P uptake in some cases cannot keep up and thus shows variable results [@poorterMetaanalysisPlantResponses2019a]  
+Nitrogen distribution along the vertical gradient optimizes to prevent photoinhition in sun leaves during direct light and shade leaves during sunflecks under available soil nitrogen conditions [@kitaoCanopyNitrogenDistribution2018]. Therefore, during growing season, $N_{area}$, along with LMA, leaf soluble sugars, starch and non-structural carbons increase with exposure [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Weerasinghe et al. 2014].
  
 ##### *(Carotenoids/Xanthophyll cycle pigments)*
 
@@ -291,7 +291,7 @@ Deciduousness as a leaf trait is an adaptation to water and heat stress. Therefo
 
 ### Interspecific variation 
 
-Across tree-size ontogeny of the same species, while fundamental adaptations to light and water are observed in canopy and understory trees similar to within-species gradient [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012], LMA, photosynthetic capcity per area, and stomatal conductance increases with height compared to saplings, under constant light conditions [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory pasticity to light and biophysical condition differs along with inherent traits such as leaf shape, size, $gs$ levels and therefore influences $T_{leaf$. As a result, some species might be more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
+Across tree-size ontogeny of the same species, while fundamental adaptations to light and water are observed in canopy and understory trees similar to within-species gradient [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012], LMA, photosynthetic capcity per area, and stomatal conductance increase with height compared to saplings, under constant light conditions [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory, pasticity to light and biophysical condition differs along with inherent traits such as leaf shape, size, $gs$ levels and therefore influences $T_{leaf}$. As a result, some species might be more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
 
 ##### Isoprene production
 -  Isoprene production *capability* as a trait 
@@ -315,7 +315,7 @@ nocite: |
 
 ### Stomatal conductance
 
-While exposed sun leaves are equipped to thermoregulate more efficiently than shaded leaves, they are largely constrained by stomatal conductance; and therefore their ability to photosynthesize as well. During the day, max transpiration rate and stomtal conductance increases with height and is greater in the upper canopy compared to shaded canopies [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010]. During midday, stomtal closure occurs when evaporative demand exceeds water transport capacity in exposed leaves thereby increasing $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004]. Thus, stomatal limitation is greater and steeper in exposed canopies than shaded leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. 
+While exposed sun leaves are equipped to thermoregulate more efficiently than shaded leaves, they are largely constrained by $gs$ [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]; and therefore their ability to photosynthesize as well. During the day, max transpiration rate and $gs$ increases with height and is greater in the upper canopy compared to shaded canopies [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010]. During midday, stomtal closure occurs when evaporative demand exceeds water transport capacity in exposed leaves thereby increasing $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004]. 
 
 ### Photosynthesis
 
@@ -324,16 +324,14 @@ This is primarily driven by the greater light available to sun leaves. Photosynt
 
 In response to the greater light availability, sun leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubsico, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy).The vertical gradient in photosynthetic rates is also influenced by available concentration of N and P (and water availability).
 
-Leaf temperature beyond photosynthetic optimum temperature declines photosynthesis [**REF**]. Photosynthesis has a peaked response to temperature, where photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing leaf temperature (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (refs. e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). 
-
-Photosynthesis will also be affected by heat stress, when photoinhibition reduces photosynthesis either as a result of photoprotective; non-photochemical quenching or related to irreversible leaf damage leading to leaf necrosis. At increasing temperatures, photosynthetic system II [PSII] is particularly vulnerable. Damage to PSII  can lead to decreased electron transport rates and photosynthetic failure. Irreversible damage to PSII is done at 40-60C [Baker 2008; @feeley_thermal_2020]. Leaves in upper canopy tend to experience more heat stress and greater photoinhibition than lower canopy leaves in conditions of water stress or drought. [@niinemetsWorldwideAnalysisWithincanopy2015] 
+Leaf temperature beyond photosynthetic optimum temperature declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing leaf temperature (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (refs. e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020]. Leaves in tropical upper canopies have shown to experience air temperatures well above $40-60{^\circ}C$ on a regular basis, if $T_{leaf}$ is not regulated through $gs$ or adapated, heat stress can loss of canopy leaves [**REF**] 
 
 *[thoughts: plasticity vs change in tree species composition through the canopy; differences in variability of microenvironments through the profile - highest lower down in canopy?; life history / investment strategies and hence, leaf life spans at leaves at the top vs bottom of the canopy]-- M N. Smith [agreed. Again the importance of differentiating between within-species and among species trait variation. Also; steepness of the vertical gradient in light and VPD. In very tall trees a gradient in water potential might cause a gradient in stomatal limitations of net photosynthesis]*
 
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
 Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), as optimum temperature $T_{opt}$ for $J_{max}$ has shown to increase with irradiance of an upper canopy leaf compared to shaded lower canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent based on the limited number of field studies that have compared temperature sensitivity of photosynthesis in sun and shade leaves.
-For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similar results were found for $T_{opt}$ of $V_{max}$ and $J_{max}$ [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020],as well in vertical species profile in Puerto Rico forests, no trend in the optimum temperature for net photosynthesis was found [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and no significant trend in temperate trees [@mau_temperate_2018].
+For 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similar results were found for $T_{opt}$ of $V_{max}$ and $J_{max}$ of tropical sun and shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and across a vertical profile in tropical forests [@mau_temperate_2018; @millerOnlySunlitLeaves2021], and temperate trees [@mau_temperate_2018].
 
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.*
 
